# bocd

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: bocd_analysis.py
bocd/: bocd.py  bocd_generative_time_series_models.py  bocd_time_series_models.py  bocd_types.py  bocd_utils.py
docs/: derivations.md  derivations.tex
examples/: Basics.ipynb
tests/bocd/: bocd_test.py  bocd_utils_test.py  conftest.py
