[tool.poetry]
name = "bocd"
packages = [{ include = "bocd" }]
version = "0.1.0"
description = ""
authors = ["Sebastian Kramer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
scipy = "^1.14.1"


[tool.poetry.group.examples.dependencies]
notebook = "^7.2.2"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
